Fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ p {
   line-height: 1.3em;
 }
 
- .img-flex {
+.img-flex {
   width: 100%;
   display: block;
 }
@@ -51,7 +51,7 @@ div {
   position: absolute;
 }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: 25em) {
 
   section {
     position: absolute;
@@ -62,44 +62,15 @@ div {
   .container {
     position: relative;
   }
-  
-}
-
-@media only screen and (min-width: 608px) {
-
-  section {
-    z-index: 10;
-    color: #fff;
-    background-color: rgba(0, 0, 0, .3);
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    font-size: 120%;
-    line-height: 1.5;
-    border-radius: 4px;
-    width: 20em;
-  }
 
 }
 
-@media only screen and (min-width: 960px) {
+@media only screen and (min-width: 38em) {
 
-  section {
-    z-index: 10;
-    color: #fff;
-    background-color: rgba(0, 0, 0, .3);
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
+  html {
     font-size: 110%;
     line-height: 1.4;
-    border-radius: 4px;
-    width: 20em;
   }
-
-}
-
-@media only screen and (min-width: 1140px) {
 
   section {
     z-index: 10;
@@ -108,8 +79,45 @@ div {
     position: absolute;
     bottom: 10px;
     right: 10px;
-    font-size: 130%;
+    border-radius: 4px;
+    width: 20em;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
     line-height: 1.5;
+  }
+
+  section {
+    z-index: 10;
+    color: #fff;
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border-radius: 4px;
+    width: 20em;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
+  section {
+    z-index: 10;
+    color: #fff;
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
     border-radius: 4px;
     width: 20em;
   }
